k8s/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sitecore-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cd.globalhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cd
            port:
              number: 80
  - host: cm.globalhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cm
            port:
              number: 80
  - host: id.globalhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: id
            port:
              number: 80
  - host: hrz.globalhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hrz
            port: 
              number: 80          
  tls:
  - hosts:
    - cd.globalhost
    secretName: global-cd-tls
  - hosts:
    - cm.globalhost
    secretName: global-cm-tls
  - hosts:
    - id.globalhost
    secretName: global-id-tls
  - hosts:
    - hrz.globalhost
    secretName: global-hrz-tls
